deplacement des fonctions de candidature de young vers user

--- a/userBundle/Resources/views/AssoM/manage-application.html.twig
+++ b/userBundle/Resources/views/AssoM/manage-application.html.twig
@@ -11,7 +11,7 @@
 <div class="coldroite">
 
 Bienvenue {{app.user.username}} !<br>
-Vous êtes dans l'espace d'administration de la candidature de {{pa.young}} au projet {{pa.project}}.
+Vous êtes dans l'espace d'administration de la candidature de {{pa.user}} au projet {{pa.project}}.
 <br>
 Etat de la candidature: {{pa.status|PAStatus}}
 <br>Derniere communication: {{pa.message}}
