--- a/userBundle/Resources/views/Profile/recommendations.html.twig
+++ b/userBundle/Resources/views/Profile/recommendations.html.twig
@@ -10,23 +10,28 @@
 {%include "ecloreuserBundle::menu_user.html.twig"%}
 <div class="coldroite">
 <h1> Mes recommandations </h1>
-{%if app.user.hasRole('ROLE_YOUNG')%}
 Ces recommandations sont visibles par les responsables des projets auxquels vous postulez. N'hésitez pas à les utiliser également hors du réseau Eclore !
 <br><br>
-{%endif%}
-
-
 {%if recomm|length>0 %}
-
-
     {% for rec in recomm %}
 	<h2> Recommandation de {{rec.sender}} en date du {{rec.initDate|date('m/d/Y')}}. </h2>
     <div class="soustitre">{{rec.project}}</div>
 	{{rec.message}}
     {%endfor%}
-
 {%else%}
     Pas encore de recommandations.
+{%endif%}
+
+<h1> Les avis sur mes projets</h1>
+<br><br>
+{%if mark|length>0 %}
+    {% for rec in mark %}
+	<h2> Avis de {{rec.sender}} en date du {{rec.initDate|date('m/d/Y')}}. </h2>
+    <div class="soustitre">{{rec.project}}</div>
+	{{rec.message}}
+    {%endfor%}
+{%else%}
+    Pas encore d'avis sur mes projets.
 {%endif%}
 </div>
 <div class="clearboth"></div>
